--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
         <div class="plans">
             <div class="card">
                 <h3>Basic</h3>
-                <div class="price">$50</div>
+                <div class="price">30 TNDT</div>
                 <ul>
                     <li>30 Days Duration</li>
                     <li>Standard Builder</li>
@@ -565,7 +565,7 @@
             <div class="card popular">
                 <div class="badge">Best Value</div>
                 <h3>Pro ⭐</h3>
-                <div class="price">$200</div>
+                <div class="price">90 TNDT</div>
                 <ul>
                     <li>1 Year Duration</li>
                     <li>Advanced Builder + Spoofing</li>
@@ -578,7 +578,7 @@
 
             <div class="card">
                 <h3>Lifetime</h3>
-                <div class="price">$500</div>
+                <div class="price">150 TNDT</div>
                 <ul>
                     <li>Forever Access</li>
                     <li>Source Code Access</li>
